Add Project files

--- a/src/app/screens/onboarding/components/detail-form/detail-form.component.html
+++ b/src/app/screens/onboarding/components/detail-form/detail-form.component.html
@@ -1,1 +1,5 @@
-<p class="bg-blue-600,text-pink">detail-form works!</p>
+<p class="text-[4rem] text-center text-secondary-0 font-custom">
+    detail-form works!
+  </p>
+  
+  
