after making form

--- a/src/app/screens/onboarding/components/detail-form/detail-form.component.html
+++ b/src/app/screens/onboarding/components/detail-form/detail-form.component.html
@@ -1,5 +1,11 @@
-<p class="text-[4rem] text-center text-secondary-0 font-custom">
-    detail-form works!
+<!-- <app-header></app-header> -->
+
+<!-- <p class="text-[4rem] text-center text-secondary-0 font-custom">
+    Welcome {{ displayName()}}
   </p>
+   -->
   
-  
+   <p class="text-5xl">Restaurant Onboarding Form</p>
+   <label>Name :</label>
+
+   <input id="restro-name",type="text">
