--- a/src/app/screens/onboarding/components/detail-form/detail-form.component.html
+++ b/src/app/screens/onboarding/components/detail-form/detail-form.component.html
@@ -1,8 +1,54 @@
-<p class="text-5xl">Restaurent Detail Form </p>
 
-<form [formGroup]="restroDetails">
-    <label>Name: &nbsp;</label>
-<input id="restro-name"type="text" [formControl]="restroDetails.controls.name"]>
-<button id="submit" onclick="displayRestroName()"></button>
-</form>
-  
+  <style>
+    .background-image {
+        background-image: url('/assets/home2.jpg'); 
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+    }
+  </style>
+
+<body class="background-image flex items-center justify-center">
+
+
+  <div class="bg-white bg-opacity-75 p-8 rounded-lg shadow-lg max-w-2xl w-full">
+    <p class="text-5xl mb-6 text-center">Restaurant Detail Form</p>
+    <form [formGroup]="restroDetails" (ngSubmit)="displayRestroDetails()" class="space-y-4">
+      <div>
+        <label class="block text-lg font-medium text-gray-700">Name: &nbsp;</label>
+        <input id="restro-name" type="text" formControlName="name" class="mt-1 p-2 w-full border border-gray-300 rounded-md shadow-sm">
+      </div>
+
+      <div>
+        <label class="block text-lg font-medium text-gray-700">Owner Name: &nbsp;</label>
+        <input id="owner-name" type="text" formControlName="owner" class="mt-1 p-2 w-full border border-gray-300 rounded-md shadow-sm">
+      </div>
+
+      <div>
+        <label class="block text-lg font-medium text-gray-700">Contact: &nbsp;</label>
+        <input id="contact" type="number" formControlName="contact" class="mt-1 p-2 w-full border border-gray-300 rounded-md shadow-sm">
+      </div>
+
+      <div>
+        <label class="block text-lg font-medium text-gray-700">Address &nbsp;</label>
+        <div formGroupName="address" class="space-y-4">
+          <div>
+            <label class="block text-lg font-medium text-gray-700">Street: &nbsp;</label>
+            <input id="restro-street" type="text" formControlName="address_street" class="mt-1 p-2 w-full border border-gray-300 rounded-md shadow-sm">
+          </div>
+          <div>
+            <label class="block text-lg font-medium text-gray-700">City: &nbsp;</label>
+            <input id="restro-city" type="text" formControlName="address_City" class="mt-1 p-2 w-full border border-gray-300 rounded-md shadow-sm">
+          </div>
+          <div>
+            <label class="block text-lg font-medium text-gray-700">Pin code: &nbsp;</label>
+            <input id="pin-code" type="number" formControlName="address_pin" class="mt-1 p-2 w-full border border-gray-300 rounded-md shadow-sm">
+          </div>
+        </div>
+      </div>
+
+      <button type="submit" class="bg-orange-800 hover:bg-orange-400 text-white font-bold py-2 px-4 rounded-md">
+        Submit
+      </button>
+    </form>
+  </div>
