--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,25 @@
-<p>header works!</p>
+<header class="bg-white shadow py-2">
+    <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+      <div class="flex items-center">
+        <h1 class="text-2xl font-bold text-gray-800">Chews</h1>
+      </div>
+      <nav class="flex items-center">
+        <ul class="flex items-center space-x-4">
+          <li>
+            <a href="#" class="text-gray-700 hover:text-gray-900 transition duration-300">Home</a>
+          </li>
+          <li>
+            <a href="#" class="text-gray-700 hover:text-gray-900 transition duration-300">About</a>
+          </li>
+          <li>
+            <a href="#" class="text-gray-700 hover:text-gray-900 transition duration-300">Contact</a>
+          </li>
+         
+        </ul>
+        <button class="bg-orange-800 hover:bg-orange-600 text-white font-bold py-1 px-3 rounded-lg ml-4">
+            Add Yours..
+          </button>
+          
+      </nav>
+    </div>
+  </header>
