before linking with backend

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
           </li>
          
         </ul>
-        <button class="bg-orange-800 hover:bg-orange-600 text-white font-bold py-1 px-3 rounded-lg ml-4">
+        <button routerLink="/onboarding/form" routerLinkActive="active" class="bg-orange-800 hover:bg-orange-600 text-white font-bold py-1 px-3 rounded-lg ml-4">
             Add Yours..
           </button>
           
