--- a/src/app/screens/onboarding/components/detail-form/detail-form.component.html
+++ b/src/app/screens/onboarding/components/detail-form/detail-form.component.html
@@ -30,6 +30,11 @@
       </div>
 
       <div>
+        <label class="block text-lg font-medium text-gray-700">Type: &nbsp;</label>
+        <input id="type" type="text" formControlName="contact" class="mt-1 p-2 w-full border border-gray-300 rounded-md shadow-sm">
+      </div>
+
+      <div>
         <label class="block text-lg font-medium text-gray-700">Address &nbsp;</label>
         <div formGroupName="address" class="space-y-4">
           <div>
