--- a/src/app/screens/onboarding/components/detail-form/detail-form.component.html
+++ b/src/app/screens/onboarding/components/detail-form/detail-form.component.html
@@ -31,7 +31,7 @@
 
       <div>
         <label class="block text-lg font-medium text-gray-700">Type: &nbsp;</label>
-        <input id="type" type="text" formControlName="contact" class="mt-1 p-2 w-full border border-gray-300 rounded-md shadow-sm">
+        <input id="type" type="text" formControlName="type" class="mt-1 p-2 w-full border border-gray-300 rounded-md shadow-sm">
       </div>
 
       <div>
