--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,25 +1,23 @@
 <header class="bg-white shadow py-2">
-    <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+  <div class="container mx-auto px-4 py-3 flex justify-between items-center">
       <div class="flex items-center">
-        <h1 class="text-2xl font-bold text-gray-800">Chews</h1>
+          <h1 class="text-2xl font-bold text-gray-800">Chews</h1>
       </div>
       <nav class="flex items-center">
-        <ul class="flex items-center space-x-4">
-          <li>
-            <a href="#" class="text-gray-700 hover:text-gray-900 transition duration-300">Home</a>
-          </li>
-          <li>
-            <a href="#" class="text-gray-700 hover:text-gray-900 transition duration-300">About</a>
-          </li>
-          <li>
-            <a href="#" class="text-gray-700 hover:text-gray-900 transition duration-300">Contact</a>
-          </li>
-         
-        </ul>
-        <button routerLink="/onboarding/form" routerLinkActive="active" class="bg-orange-800 hover:bg-orange-600 text-white font-bold py-1 px-3 rounded-lg ml-4">
-            Add Yours..
+          <ul class="flex items-center space-x-4">
+              <li>
+                  <a routerLink="/" routerLinkActive="text-gray-900" class="text-gray-700 hover:text-gray-900 transition duration-300">Home</a>
+              </li>
+              <li>
+                  <a routerLink="/about" routerLinkActive="text-gray-900" class="text-gray-700 hover:text-gray-900 transition duration-300">About</a>
+              </li>
+              <li>
+                  <a routerLink="/contact" routerLinkActive="text-gray-900" class="text-gray-700 hover:text-gray-900 transition duration-300">Contact</a>
+              </li>
+          </ul>
+          <button routerLink="/onboarding/login" routerLinkActive="active" class="bg-orange-800 hover:bg-orange-600 text-white font-bold py-1 px-3 rounded-lg ml-4">
+              Login
           </button>
-          
       </nav>
-    </div>
-  </header>
+  </div>
+</header>
