--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,17 +6,17 @@
       <nav class="flex items-center">
           <ul class="flex items-center space-x-4">
               <li>
-                  <a routerLink="/" routerLinkActive="text-gray-900" class="text-gray-700 hover:text-gray-900 transition duration-300">Home</a>
+                  <a routerLink="/" routerLinkActive="active" class="text-gray-700 hover:text-gray-900 transition duration-300">Home</a>
               </li>
               <li>
-                  <a routerLink="/about" routerLinkActive="text-gray-900" class="text-gray-700 hover:text-gray-900 transition duration-300">About</a>
+                  <a routerLink="/about" routerLinkActive="active" class="text-gray-700 hover:text-gray-900 transition duration-300">About</a>
               </li>
               <li>
-                  <a routerLink="/contact" routerLinkActive="text-gray-900" class="text-gray-700 hover:text-gray-900 transition duration-300">Contact</a>
+                  <a routerLink="/contact" routerLinkActive="active" class="text-gray-700 hover:text-gray-900 transition duration-300">Contact</a>
               </li>
           </ul>
           <button routerLink="/onboarding/login" routerLinkActive="active" class="bg-orange-800 hover:bg-orange-600 text-white font-bold py-1 px-3 rounded-lg ml-4">
-              Login
+              Add Yours..
           </button>
       </nav>
   </div>
