--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,8 +3,8 @@
     <div class="absolute inset-0 flex flex-col items-center justify-center bg-black bg-opacity-50">
       <h1 class="text-white text-4xl md:text-8xl font-bold mb-4">Partner with us</h1>
       <div class="space-x-4">
-        <button routerLink="/onboarding/form" routerLinkActive="active" class="bg-orange-700 text-white text-2xl font-semibold py-4 px-8 rounded hover:bg-orange-500">Register Restaurant</button>
-        <button class="bg-white text-black font-semibold py-4 px-8 text-2xl rounded">Check Restaurants</button>
+        <button routerLink="/onboarding/form" routerLinkActive="active" class="bg-orange-700 text-white text-2xl font-semibold py-4 px-8 rounded hover:bg-orange-500"> Register Restaurant</button>
+        <button routerLink="/onboarding/show" routerLinkActive="active"class="bg-white text-black font-semibold py-4 px-8 text-2xl rounded">Check Restaurants</button>
       </div>
     </div>
   </div>
